# kosmos-ecommerce

./: CLAUDE.md  README.md  justfile  kosmos.code-workspace  package.json  pnpm-lock.yaml  pyproject.toml
apps/web/: .env.local.example  CONTEXT.md  (+3 more)
services/iam-service/: .env.example  CLAUDE.md  README.md  justfile  pyproject.toml
services/iam-service/app/: config.py  main.py
services/iam-service/app/auth/application/: dto.py
services/iam-service/app/auth/domain/: exceptions.py
services/iam-service/app/auth/infrastructure/: composition.py  unit_of_work.py
services/iam-service/app/rbac/application/: dto.py
services/iam-service/app/rbac/domain/: events.py  exceptions.py
services/iam-service/app/rbac/infrastructure/: composition.py  unit_of_work.py
services/iam-service/app/shared/domain/: exceptions.py
services/iam-service/migrations/versions/: b68e4555c546_drop_username_and_organization_id_from_.py
services/iam-service/openapi/: openapi.yaml
services/iam-service/scripts/: seed.py
services/iam-service/tests/integration/: conftest.py  test_admin_routes.py  test_auth_routes.py
services/iam-service/tests/unit/: test_dependencies.py  test_logging.py  test_rate_limit.py
services/iam-service/tests/unit/auth/: fakes.py  test_login_use_case.py  test_signup_use_case.py
services/iam-service/tests/unit/rbac/: fakes.py  test_assign_permission_use_case.py  test_assign_role_to_user_use_case.py  test_create_role_use_case.py  test_delete_role_use_case.py  test_rbac_events_audit.py  test_revoke_permission_use_case.py  test_revoke_role_from_user_use_case.py
(+159 files in other folders)
