[project]
name = "kosmos-ecommerce"
version = "0.1.0"
description = "Kosmos - Comsetics Digital Shop"
requires-python = ">=3.13,<3.14"

[tool.uv.workspace]
members = [
    "services/*",
    "packages/*",
]
exclude = [
    "packages/kosmos-design",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
